# gaze-diffuse

./: .gitignore  .gitmodules  CLAUDE.md  HISTORY.md  Makefile  PROGRESS_REPORT_APR_2026.md  README.md  pyproject.toml
paper/: main.tex  references.bib
paper/figures/: method_overview.tex
paper/tables/: results.tex
scripts/: download_checkpoints.sh  download_data.sh  plot_results.py  setup_hpc.sh
scripts/slurm/: exp1_mdlm_baseline.slurm  exp2_gaze_predictor.slurm  exp3_ar_baseline.slurm  exp4_gazediffuse_mdlm.slurm  exp5_gazediffuse_llada.slurm
src/: ar_baseline.py  gaze_guidance.py  gaze_predictor.py  metrics.py
src/data/: geco.py  prompts.py
src/models/: mdlm_wrapper.py
tests/: conftest.py  test_ar_baseline.py  test_data.py  test_gaze_guidance.py  test_gaze_predictor.py  test_geco_data.py  test_integration.py  test_mdlm_wrapper.py  test_metrics.py  test_training_smoke.py
