[project]
name = "gaze-diffuse"
version = "0.1.0"
description = "GazeDiffuse: Controllable Readability in Text Diffusion Models via Gaze-Guided Parallel Decoding"
requires-python = ">=3.9"
authors = [
    {name = "Rahil Singhi", email = "rs9174@nyu.edu"},
]
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.38.0",
    "accelerate>=0.27.0",
    "datasets>=2.18.0",
    "lightning>=2.2.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
    "textstat>=0.7.0",
    "mauve-text>=0.3.0",
    "wandb>=0.16.0",
    "scipy>=1.12.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "isort>=5.13.0",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
target-version = "py39"

[tool.ruff.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -v"
markers = [
    "unit: Unit tests (no GPU, no data)",
    "integration: Integration tests (may need GPU or data)",
    "slow: Slow tests (full model loading)",
]
